# slam_viz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  slamviz_plan.md
assets/: sample_poses.json
shaders/: frustum.wgsl  grid.wgsl
src/: app.rs  main.rs
src/data/: loader.rs  mod.rs  pose.rs
src/renderer/: axes.rs  camera.rs  context.rs  frustum.rs  grid.rs  mod.rs  scene_renderer.rs
src/state/: mod.rs  playback.rs
src/ui/: layout.rs  mod.rs  pane_kind.rs  tile_behavior.rs  timeline.rs  viewport.rs
src/ui/panes/: info_panel.rs  mini_map.rs  mod.rs  plot_picker.rs  position_plot.rs  speed_plot.rs  time_plot.rs  view3d.rs
