[package]
name = "slam_viz"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
winit = { version = "0.30", features = ["rwh_06"] }
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.15"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
anyhow = "1"
egui_tiles = "0.10"
egui_plot  = "0.29"
